objects/boxmigrate__Box_Migration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>boxmigrate__Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Box_User_Id__c</fullName>
        <inlineHelpText>The Salesforce Id of the Box Integration User. This is the box administrator and salesforce administrator</inlineHelpText>
        <label>Box User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boxmigrate__New_SF_Root_Directory_ID__c</fullName>
        <label>New SF Root Directory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Old_SF_Root_Directory_ID__c</fullName>
        <label>Old SF Root Directory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Test_Move_Size__c</fullName>
        <label>Test Move Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Test_Move__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to only move small groups of folders to the new folder directory</description>
        <inlineHelpText>Used to only move small groups of folders to the new folder directory</inlineHelpText>
        <label>Test Move</label>
        <type>Checkbox</type>
    </fields>
    <label>Box Migration Settings</label>
</CustomObject>